# KeyboardMaster

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  README.md
cmake/download/: CMakeLists.txt.in  googletest.cmake
data/: all_words.txt  all_words_2.txt  all_words_easy.txt  art_01.txt  art_02.txt  art_03.txt  art_04.txt  art_05.txt  art_06.txt  course_02.txt  course_04.txt  course_06.txt  course_11.txt  course_18.txt  course_19.txt  courses.txt  dict_words.txt  dictionary  text-pl.txt  texts-en  texts-pl  texts-pl-2.txt  words_01  words_02  words_03  words_04  words_05  words_06  words_07  words_08
data/course/: course_00.txt  course_00.txt.old  course_01.txt  course_03.txt  course_05.txt  course_07.txt  course_08.txt  course_09.txt  course_10.txt  course_12.txt  course_13.txt  course_14.txt  course_15.txt  course_16.txt  course_17.txt  course_20.txt
source/: CMakeLists.txt
source/framework/: CatchGame.hpp  CourseMenu.cpp  GameState.cpp  MainMenu.cpp  MainMenu.hpp  Snake.hpp
source/frameworkLib/: CMakeLists.txt  GameBase.hpp  IGameComponent.hpp  StateBase.hpp  Utilities.cpp  Utilities.hpp
source/frameworkLib/GUI/: Button.cpp  Button.hpp  IWidget.hpp  StackMenu.cpp  StackMenu.hpp  Textbox.cpp  Textbox.hpp  Widget.cpp  Widget.hpp
source/frameworkLib/ResourceManager/: ResourceHolder.cpp  ResourceHolder.hpp  ResourceManager.hpp
source/frameworkLib/Util/: Animation.cpp  Animation.hpp  Arithmetic.hpp  FPSCounter.cpp  FPSCounter.hpp  Files.cpp  Files.hpp  Logger.hpp  Maths.cpp  Maths.hpp  NonCopyable.hpp  NonInstanceable.hpp  NonMoveable.hpp  Observer.hpp  Observer2.cpp  Observer2.hpp  Random.hpp  Singleton.hpp  Timer.hpp  ToggleKey.cpp  ToggleKey.h
source/frameworkTest/: CMakeLists.txt  CatchGame.cpp  CatchGame.hpp  CourseMenu.cpp  CourseMenu.hpp  GameSate.hpp  GameState.cpp  Main.cpp  MainMenu.cpp  MainMenu.hpp  Snake.cpp
source/keyboardmaster/: Assets.hpp  CMakeLists.txt  CourseGame.cpp  CourseGame.hpp  CourseMenu.cpp  CourseMenu.hpp  Dictionary.cpp  Dictionary.hpp  GalleryGame.cpp  GalleryGame.hpp  KeyboardMaster.cpp  KeyboardMaster.hpp  KeyboardTyper.cpp  KeyboardTyper.hpp  Main.cpp  MainMenu.cpp  MainMenu.hpp  Metronome.cpp  Metronome.hpp  Misc.hpp  Picture.cpp  Picture.hpp  PictureElement.cpp  PictureElement.hpp  Scheduler.hpp  SimpleApplication.hpp  SoundPlayer.hpp  SpaceShip.hpp  StarsBackground.hpp  TypingTextComponent.hpp  VirtualKeyboard.cpp  VirtualKeyboard.hpp  WordBlock.cpp  WordBlock.hpp  WordsAttackGame.cpp  WordsAttackGame.hpp  WritingGame.cpp  WritingGame.hpp
test/: CMakeLists.txt
test/framework-ut/: StateBaseMock.hpp
test/frameworkUT/: CMakeLists.txt  StateBaseFixture.hpp  StateBaseMock.hpp  StateBaseTest.cpp  UtilitiesTest.cpp
test/keyboardmasterUT/: CMakeLists.txt  keyboardmasterTests.cpp
